// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Workflows /> should render correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        "/workflows",
      ]
    }
  >
    <IntlProvider
      locale="en"
    >
      <Workflows
        history={
          Object {
            "push": [MockFunction],
          }
        }
      />
    </IntlProvider>
  </MemoryRouter>
</Provider>
`;

exports[`<Workflows /> should render correctly in loading state 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        "/workflows",
      ]
    }
  >
    <IntlProvider
      locale="en"
    >
      <Workflows
        history={
          Object {
            "push": [MockFunction],
          }
        }
        isLoading={true}
      />
    </IntlProvider>
  </MemoryRouter>
</Provider>
`;
